# jira-manager

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  jira_login.py  jira_session.py  main.py
app/static/css/: styles.css
app/templates/: await_login.html  overview.html
